fixed footer alignment

--- a/movie.css
+++ b/movie.css
@@ -150,7 +150,8 @@ ul
 	text-align: center;
 	position: absolute;
 	bottom: 0;
-    width: 100%;
+        width: 120%;
+        margin-left: -20px;
 	background-color: #A2B964;
 }
 
